--- a/winestuff/ubuntu/changelog
+++ b/winestuff/ubuntu/changelog
@@ -1,3 +1,10 @@
+winestuff (0.1.1-0pashazz1~ppa1) lucid; urgency=low
+
+  * Release 0.1.0 (upstream), 0.1.1 for Debian
+    * Downloader from playonlinux.com 
+
+ -- Pavel Zinin (Pashazz`s GnuPG key) <PZinin@gmail.com>  Mon, 14 Jun 2010 14:47:11 +0400
+
 winestuff (0.1.0-rc4-0pashazz1~ppa2) lucid; urgency=low
 
   * Qt dependence.
